<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!--android:checkableBehavior="single"-->
    <group>
        <item
            android:id="@+id/filter"
            android:icon="@drawable/filter"
            android:title="@string/filter_menu" />
       <!-- <item
            android:id="@+id/setting"
            android:icon="@drawable/search"
            android:title="Setting" />-->
        <item
            android:id="@+id/log"
            android:icon="@drawable/share_file_icon"
            android:title="@string/share_log_file_menu" />



    </group>

    <item android:title="@string/communicate_menu">
        <menu>

            <item
                android:id="@+id/app_share"
                android:icon="@drawable/share"
                android:title="@string/share_app_menu" />

            <item
                android:id="@+id/rate_app"
                android:icon="@drawable/like"
                android:title="@string/rate_app_menu" />
            <!--<item
                android:id="@+id/help"
                android:icon="@drawable/ic_error_outline_black_48dp"
                android:title="Help" />-->

            <item
                android:id="@+id/contact"
                android:icon="@drawable/edit"
                android:title="@string/feedback_menu" />
        </menu>
    </item>

</menu>
